--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -1,198 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    tools:context=".view.CourseDetailActivity">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:layout_width="fill_parent" android:layout_height="fill_parent"
+    android:scrollbars="vertical">
 
-        <TextView
-            android:id="@+id/lbl_course_detail_mentor_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/course_detail_mentor_name_entry"
-            android:layout_toStartOf="@+id/course_detail_title"
-            android:layout_toLeftOf="@+id/course_detail_title"
-            android:text="@string/name" />
+    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent" android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/lbl_course_detail_mentor_phone_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/course_detail_mentor_phone_number_entry"
-            android:layout_toStartOf="@+id/lbl_course_mentor"
-            android:layout_toLeftOf="@+id/lbl_course_mentor"
-            android:text="@string/phone_number" />
+        <RelativeLayout
+            android:layout_width="380dp"
+            android:layout_height="800dp">
 
-        <TextView
-            android:id="@+id/lbl_course_mentor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="122dp"
-            android:text="@string/course_mentor" />
-
-        <EditText
-            android:id="@+id/course_detail_mentor_phone_number_entry"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/course_detail_mentor_name_entry"
-            android:layout_marginTop="-69dp"
-            android:ems="10"
-            android:hint="@string/phone_number"
-            android:inputType="phone" />
-
-        <Switch
-            android:id="@+id/end_date_reminder_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/start_date_reminder_switch"
-            android:layout_centerHorizontal="true"
-            android:text="@string/set_end_date_reminder" />
-
-        <TextView
-            android:id="@+id/lbl_course_detail_mentor_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/course_detail_mentor_email_entry"
-            android:layout_below="@+id/lbl_course_detail_mentor_phone_number"
-            android:text="@string/e_mail" />
-
-        <Switch
-            android:id="@+id/start_date_reminder_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="170dp"
-            android:text="@string/set_start_date_reminder" />
-
-        <TextView
-            android:id="@+id/lbl_course_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="255dp"
-            android:text="@string/course_status" />
-
-        <Button
-            android:id="@+id/course_notes_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="237dp"
-            android:text="@string/course_notes" />
-
-        <EditText
-            android:id="@+id/course_end_date_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/lbl_course_mentor"
-            android:layout_below="@+id/course_start_date_edit"
-            android:ems="10"
-            android:inputType="date" />
-
-        <EditText
-            android:id="@+id/course_detail_mentor_name_entry"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="69dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
-
-        <TextView
-            android:id="@+id/lbl_course_start_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/course_start_date_edit"
-            android:layout_alignStart="@+id/textView7"
-            android:text="@string/start_date" />
-
-        <TextView
-            android:id="@+id/lbl_course_end_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/course_end_date_edit"
-            android:layout_alignEnd="@+id/lbl_course_start_date"
-            android:text="@string/end_date" />
-
-        <EditText
-            android:id="@+id/course_detail_mentor_email_entry"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/course_detail_mentor_phone_number_entry"
-            android:ems="10"
-            android:inputType="textEmailAddress" />
-
-        <TextView
-            android:id="@+id/course_detail_title"
-            style="@style/Text.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="@string/course_name" />
-
-        <EditText
-            android:id="@+id/course_start_date_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/lbl_course_mentor"
-            android:layout_below="@+id/course_detail_title"
-            android:ems="10"
-            android:inputType="date" />
-
-        <RadioGroup
-            android:id="@+id/course_status_selection"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/lbl_course_status"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="-248dp">
-
-            <RadioButton
-                android:id="@+id/course_status_planned"
+            <TextView
+                android:id="@+id/course_detail_course_name"
+                style="@style/Text.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/planned" />
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="22dp"
+                android:text="@string/course_name" />
 
-            <RadioButton
-                android:id="@+id/course_status_in_progress"
+            <TextView
+                android:id="@+id/course_detail_status_label"
+                style="@style/Text.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/in_progress" />
+                android:layout_below="@+id/course_detail_assessment_name"
+                android:layout_centerHorizontal="true"
+                android:text="@string/course_status" />
 
-            <RadioButton
-                android:id="@+id/course_status_completed"
+            <TextView
+                android:id="@+id/course_detail_status"
+                style="@style/Text.Item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/completed" />
-        </RadioGroup>
+                android:layout_below="@+id/course_detail_status_label"
+                android:layout_centerHorizontal="true"
+                android:text="@string/course_status" />
 
-        <Button
-            android:id="@+id/course_detail_change_mentor_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignBottom="@+id/course_detail_mentor_email_entry"
-            android:layout_centerHorizontal="true"
-            android:text="Change Mentor" />
+            <TextView
+                android:id="@+id/course_detail_course_dates_label"
+                style="@style/Text.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/course_detail_status"
+                android:layout_centerHorizontal="true"
+                android:text="@string/course_dates" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/course_detail_course_start_date"
+                style="@style/Text.Item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/course_detail_course_dates_label"
+                android:layout_marginStart="82dp"
+                android:layout_marginLeft="82dp"
+                android:text="@string/start_date" />
+
+            <TextView
+                android:id="@+id/course_detail_course_end_date"
+                style="@style/Text.Item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/course_detail_course_dates_label"
+                android:layout_toEndOf="@+id/course_detail_course_start_date"
+                android:layout_toRightOf="@+id/course_detail_course_start_date"
+                android:text="@string/end_date" />
+
+            <TextView
+                android:id="@+id/course_detail_course_mentor_label"
+                style="@style/Text.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/course_detail_course_end_date"
+                android:layout_centerHorizontal="true"
+                android:text="@string/course_mentor" />
+
+
+            <Button
+                android:id="@+id/course_detail_edit_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/course_detail_home_button"
+                android:layout_centerHorizontal="true"
+                android:text="@string/edit" />
+
+            <TextView
+                android:id="@+id/course_detail_mentor_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/mentor_name" />
+
+            <TextView
+                android:id="@+id/course_detail_mentor_phone_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/course_detail_mentor_name"
+                android:layout_centerHorizontal="true"
+                android:text="@string/phone_number" />
+
+            <TextView
+                android:id="@+id/course_detail_mentor_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/course_detail_mentor_phone_number"
+                android:layout_centerHorizontal="true"
+                android:text="@string/e_mail" />
+
+            <Button
+                android:id="@+id/course_detail_add_mentor_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/course_detail_mentor_email"
+                android:layout_centerHorizontal="true"
+                android:text="@string/add_mentor" />
+
+            <TextView
+                android:id="@+id/course_detail_assessments_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/Text.Title"
+                android:layout_below="@+id/course_detail_add_mentor_button"
+                android:layout_centerHorizontal="true"
+                android:text="@string/course_assessments" />
+
+            <Button
+                android:id="@+id/course_detail_home_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="@string/home" />
+
+            <TextView
+                android:id="@+id/course_detail_course_assessment_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/course_detail_assessments_label"
+                android:layout_centerHorizontal="true"
+                android:text="@string/assessment_name" />
+
+            <Button
+                android:id="@+id/course_detail_add_assessment_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/course_detail_course_assessment_name"
+                android:layout_centerHorizontal="true"
+                android:text="@string/add_assessment" />
+
+            <Button
+                android:id="@+id/course_detail_course_notes_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/course_detail_edit_button"
+                android:layout_centerHorizontal="true"
+                android:text="@string/course_notes" />
+
+
+        </RelativeLayout>
+
+
+    </HorizontalScrollView>
+
 </ScrollView>
