--- a/app/src/main/res/layout/activity_update_assessment.xml
+++ b/app/src/main/res/layout/activity_update_assessment.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="149dp"
+        android:layout_marginTop="109dp"
         android:ems="10"
         android:hint="@string/assessment_name"
         android:inputType="text" />
@@ -32,10 +32,10 @@
         android:id="@+id/update_assessment_due_date_entry"
         android:layout_width="270dp"
         android:layout_height="59dp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/update_assessment_type_group"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="155dp"
         android:clickable="true"
+        android:focusable="true"
         android:ems="10"
         android:hint="@string/due_date"
         android:inputType="date" />
@@ -60,10 +60,12 @@
         android:text="@string/delete_assessment" />
 
     <RadioGroup
+        android:id="@+id/update_assessment_type_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/update_assessment_type_group">
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="197dp">
 
         <RadioButton
             android:id="@+id/update_assessment_pre_assessment_entry"
@@ -91,9 +93,32 @@
         android:id="@+id/update_assessment_type_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/update_assessment_type_group"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="171dp"
         android:text="@string/assessment_type" />
+
+    <TextView
+        android:id="@+id/update_assessment_course_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="189dp"
+        android:text="@string/assign_to_course" />
+
+    <Spinner
+        android:id="@+id/update_assessment_course_list"
+        style="@style/Dropdown"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="131dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown" />
+
 
 
 </RelativeLayout>
