--- a/app/src/main/res/layout/activity_update_course.xml
+++ b/app/src/main/res/layout/activity_update_course.xml
@@ -63,9 +63,8 @@
         android:id="@+id/update_course_start_date_toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/update_course_end_date_entry"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="222dp"
         android:text="@string/set_start_date_reminder" />
 
     <TextView
@@ -110,18 +109,38 @@
         android:id="@+id/update_course_save_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="453dp"
+        android:layout_above="@+id/update_course_delete_button"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:text="@string/update_course" />
 
     <Button
         android:id="@+id/update_course_delete_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/update_course_save_button"
         android:text="@string/delete_course" />
+
+    <TextView
+        android:id="@+id/update_course_term_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="141dp"
+        android:text="@string/assign_to_term" />
+
+    <Spinner
+        android:id="@+id/update_course_term_list"
+        style="@style/Dropdown"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/update_course_term_label"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-141dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown" />
 
 </RelativeLayout>
