--- a/app/src/main/res/layout/activity_add_new_assessment.xml
+++ b/app/src/main/res/layout/activity_add_new_assessment.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="149dp"
+        android:layout_marginTop="104dp"
         android:ems="10"
         android:hint="@string/assessment_name"
         android:inputType="text" />
@@ -31,9 +31,7 @@
         android:id="@+id/add_assessment_due_date_entry"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="169dp"
+        android:layout_centerInParent="true"
         android:clickable="true"
         android:ems="10"
         android:focusable="true"
@@ -51,10 +49,11 @@
         android:text="@string/save" />
 
     <RadioGroup
+        android:id="@+id/add_assessment_type_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/add_assessment_type_group">
+        android:layout_below="@+id/add_assessment_type_label"
+        android:layout_centerHorizontal="true">
 
         <RadioButton
             android:id="@+id/add_assessment_pre_assessment_entry"
@@ -90,7 +89,7 @@
         android:id="@+id/add_assessment_type_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/add_assessment_type_group"
+        android:layout_below="@+id/add_assessment_name_entry"
         android:layout_centerHorizontal="true"
         android:text="@string/assessment_type" />
 
@@ -105,5 +104,13 @@
         android:layout_marginBottom="82dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown" />
+
+    <Switch
+        android:id="@+id/add_assessment_due_date_notification_switch"
+        android:layout_width="176dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/add_assessment_due_date_entry"
+        android:layout_centerHorizontal="true"
+        android:text="@string/set_assessment_due_date_notification" />
 
 </RelativeLayout>
