--- a/app/src/main/res/layout/activity_update_assessment.xml
+++ b/app/src/main/res/layout/activity_update_assessment.xml
@@ -102,9 +102,8 @@
         android:id="@+id/update_assessment_course_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/update_assessment_course_list"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="189dp"
         android:text="@string/assign_to_course" />
 
     <Spinner
@@ -112,12 +111,19 @@
         style="@style/Dropdown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/update_assessment_save_button"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="131dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown" />
+
+    <Switch
+        android:id="@+id/update_assessment_due_date_notification_switch"
+        android:layout_width="176dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/update_assessment_due_date_entry"
+        android:layout_centerHorizontal="true"
+        android:text="@string/set_assessment_due_date_notification" />
 
 
 
